# info_pyramid

./: .env.example  API_TESTING_COMPLETE_SUMMARY.md  ASYNC_IMPROVEMENTS.md  COMPREHENSIVE_TESTING_SUMMARY.md  DEPENDENCY_FIXES.md  FINANCIAL_EVENTS_RESEARCH.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEW_DATA_SOURCES_SUMMARY.md  RATE_LIMITING.md  README.md  TESTING_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_IMPROVEMENTS_SUMMARY.md  VARIABLE_FIXES.md  pyproject.toml  pytest.ini  run_coverage.py  run_tests.py  simple_test.py  test_api_flow.py  test_api_performance.py  test_error_handling.py  test_rate_limiting.py
src/ak_unified/: __init__.py  api.py  config.py  dispatcher.py  logging.py  normalization.py  rate_limiter.py  registry.py  storage.py
src/ak_unified/adapters/: adata_adapter.py  akshare_adapter.py  alphavantage_adapter.py  baostock_adapter.py  base.py  earnings_calendar_adapter.py  easytrader_adapter.py  efinance_adapter.py  financial_data_adapter.py  fund_portfolio_adapter.py  ibkr_adapter.py  mootdx_adapter.py  qmt_adapter.py  qstock_adapter.py  snowball_adapter.py  yfinance_adapter.py
src/ak_unified/schemas/: core.py  easytrader.py  envelope.py  events.py  financial.py  fund.py  snowball.py
src/ak_unified/tools/: async_file_tools.py  blob_tools.py  cache_tools.py
tests/: test_akshare_functions.py  test_alphavantage_adapter.py  test_api.py  test_core.py  test_datasets.py  test_efinance_adapter.py  test_performance.py  test_qmt_adapter.py  test_rate_limiter.py  test_storage.py  test_yfinance_adapter.py
