[project]
name = "ak-unified"
version = "0.1.0"
description = "Unified interface and schemas for AkShare across macro/market/securities"
requires-python = ">=3.9"
authors = [
  { name = "Unified AkShare", email = "noreply@example.com" }
]
readme = "README.md"
dependencies = [
  "akshare>=1.13.0",
  "pandas>=2.0.0",
  "pydantic>=2.6.0",
  "pyarrow>=15.0.0",
  "pendulum>=3.0.0",
  "python-dateutil>=2.9.0",
  "orjson>=3.9.15",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.1.0",
  "PyYAML>=6.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ak_unified"]

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
]

[tool.uv.sources]
# mirror/source configuration can be added here