[project]
name = "ak-unified"
version = "0.1.0"
description = "Unified interface and schemas for AkShare across macro/market/securities"
requires-python = ">=3.9"
authors = [
  { name = "Unified AkShare", email = "noreply@example.com" }
]
readme = "README.md"
dependencies = [
  "akshare>=1.13.0",
  "pandas>=2.0.0",
  "pydantic>=2.6.0",
  "pyarrow>=15.0.0",
  "pendulum>=3.0.0",
  "python-dateutil>=2.9.0",
  "orjson>=3.9.15",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.1.0",
  "PyYAML>=6.0",
  "asyncpg>=0.29.0",
  "loguru>=0.7.0"
]

[project.optional-dependencies]
# Complementary data sources (install on demand)
baostock = ["baostock>=0.8.0"]
mootdx = ["mootdx>=0.9.0"]
efinance = ["efinance>=0.5.0"]
qstock = ["qstock>=0.6.0"]
adata = ["adata"]
yfinance = ["yfinance>=0.2.0"]
ibkr = ["ib-insync>=0.9.86"]
complements = [
  "baostock>=0.8.0",
  "mootdx>=0.9.0",
  "efinance>=0.5.0",
  "qstock>=0.6.0",
  "adata",
  "yfinance>=0.2.0",
  "ib-insync>=0.9.86",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ak_unified"]

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
]

[tool.uv.sources]
# mirror/source configuration can be added here